--- a/chart/ui/mainwindow.ui
+++ b/chart/ui/mainwindow.ui
@@ -107,6 +107,12 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
        <widget class="QQuickWidget" name="slider">
@@ -121,6 +127,9 @@
           <width>16777215</width>
           <height>60</height>
          </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
         </property>
         <property name="resizeMode">
          <enum>QQuickWidget::ResizeMode::SizeRootObjectToView</enum>
